[package]
name = "limbo_regexp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Limbo regexp extension"

[features]
static = ["limbo_ext/static"]
defaults = []

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
limbo_ext = { workspace = true, features = ["static"] }
regex = "1.11.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
